# Type-Registering-Based-Serializer

./: CMakeLists.txt  DataMemberWrapper.hpp  FunctionWrapper.hpp  README.md  Serializer.h
tests/: DataMemberWrapper.cpp  Serializer.cpp
